# open-czplanet

./: .gitignore  README-backend.md  common.md  debug.md  deploy_java_jars.sh  mvnw  pom.xml  trae.md
ai-agent-service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
ai-agent-service/app/: __init__.py  main.py  observability.py  worker.py
ai-agent-service/app/api/: chat_summary.py  health.py  lesson_report.py  realtime.py  task.py
ai-agent-service/app/asr/: __init__.py  base.py  provider.py  tencent_provider.py
ai-agent-service/app/core/: config.py  errors.py  id_generator.py  security.py
ai-agent-service/app/llm/: base.py  openai_compatible_provider.py  provider.py  template_provider.py
ai-agent-service/app/pipelines/: __init__.py  chat_summary_pipeline.py  lesson_report_pipeline.py
ai-agent-service/app/queue/: redis_queue.py
ai-agent-service/app/realtime/: __init__.py  agent_llm.py  agent_models.py  context.py  events.py  graph.py  llm.py  memory.py  orchestrator.py  patches.py  rule_engine.py  stage_tracker.py  state_store.py  trace.py  turns.py
ai-agent-service/app/repositories/: chat_summary_repository.py  realtime_repository.py  report_repository.py  task_repository.py
ai-agent-service/app/schemas/: chat_summary.py  common.py  lesson_report.py  realtime.py  task.py
ai-agent-service/app/services/: chat_summary_service.py  lesson_report_service.py  realtime_service.py  task_dispatcher.py
ai-agent-service/app/storage/: database.py
ai-agent-service/app/tasks/: __init__.py  handlers.py
ai-agent-service/scripts/: bootstrap_env.sh  evaluate_realtime_agent.py  export_nacos_env.py  run_dev.sh  run_prod.sh  run_worker.sh
ai-agent-service/tests/: test_api.py  test_nacos_env.py  test_realtime_agent.py
ai-agent-service/tests/fixtures/: realtime_math_function_lesson.json
qa/automation/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
qa/automation/api/: admin_client.py  appointment_client.py  assets_client.py  chat_client.py  course_client.py  job_client.py  live_client.py  payment_client.py  schedule_client.py  user_client.py
qa/automation/core/: assertions.py  auth.py  config.py  http_client.py  payment_notify.py
qa/automation/scripts/: ensure_backend.sh  run_regression.sh  run_smoke.sh
qa/automation/tests/api/: test_auth_regression.py  test_chat_regression.py  test_chat_smoke.py  test_course_lesson_smoke.py  test_funds_p0.py  test_payment_regression.py  test_payment_smoke.py  test_user_me_smoke.py
qa/automation/tests/e2e/: test_chat_e2e.py  test_payment_cashier_e2e.py
qa/automation/ui/: app_auth.py
(+1684 files in other folders)
