[project]
name = "ai-agent-service"
version = "0.1.0"
description = "AI agent microservice for lesson reports and IM chat summaries."
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi>=0.115.12,<1.0",
    "uvicorn[standard]>=0.34.0,<1.0",
    "pydantic>=2.10.6,<3.0",
    "pydantic-settings>=2.8.1,<3.0",
    "redis>=5.2.1,<6.0",
    "rq>=2.1.0,<3.0",
    "sqlalchemy>=2.0.39,<3.0",
    "pymysql>=1.1.1,<2.0",
    "httpx>=0.28.1,<1.0",
    "python-dotenv>=1.0.1,<2.0",
    "PyYAML>=6.0.2,<7.0",
    "langchain>=0.3.25,<0.4",
    "langgraph>=0.2.56,<0.3",
    "langchain-openai>=0.2.14,<0.3",
    "websocket-client==0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0",
    "ruff>=0.9.10,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
