[tool.poetry]
name = "ai-tutor-qa-automation"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pytest = "^8.3.5"
requests = "^2.32.3"
playwright = "^1.51.0"
pytest-rerunfailures = "^14.0"
pytest-timeout = "^2.3.1"
python-dotenv = "^1.0.1"
PyJWT = "^2.10.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
  "smoke",
  "regression",
  "api",
  "ui",
  "e2e",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
